<!-- ES-MX -->
<resources>
    <string name="app_name">LumaApp</string>
    <string name="permission_needed">Permiso necesario</string>
    <string name="accept">Aceptar</string>

    <!-- Menu Strings -->
    <string name="home_m">Inicio</string>
    <string name="coupons_m">Cupones</string>
    <string name="settings_m">Ajustes</string>

    <!--    Strings del layout perfil-->
    <string name="mi_perfil">Mi perfil</string>
    <string name="nombre_template">Rodrigo Sebastián de la Rosa Andrés</string>
    <string name="telefono_template">Telefono: 7472211787</string>
    <string name="edad_template">Edad: 20 años</string>
    <string name="edad_inicio">Edad: </string>
    <string name="edad_final"> años</string>
    <string name="carrera_template">Carrera: ITC</string>
    <string name="ecopuntos_acumulados">€copuntos acumulados</string>
    <string name="sol_template">Take to direct sun once on week</string>
    <string name="gota_template">Watering each 3 days</string>
    <string name="termo_template">Tropical plants</string>
    <string name="ecopuntos_totales">250</string>
    <string name="descripcion2">Nada</string>
    <string name="descripcion">Nada</string>
    <string name="cerrar_sesion">Cerrar sesión</string>

    <!--    Strings del layout Log-In-->
    <string name="LogIn">Iniciar Sesión</string>
    <string name="User">Usuario</string>
    <string name="Password">Contraseña</string>
    <string name="descripcionddd">descrip</string>
    <string name="mantener_sesn_iniciada">Mantener sesión iniciada</string>
    <string name="NoAccount">¿No tienes cuenta? Crea una</string>

    <!--    Strings del Register-->
    <string name="Register">Activar cuenta</string>
    <string name="NotMatch">Not match</string>
    <string name="password_confirm">Confirmar contraseña</string>

    <!--    Strings del modelo para recycler view Rutas-->
    <string name="inicioR">Inicio:</string>
    <string name="destinoR">Destino:</string>
    <string name="horaSalidaR">Hora:</string>
    <string name="precioR">Precio:</string>
    <string name="inicioR_template">Buena Vista</string>
    <string name="hora_salida_template">9:00 am</string>
    <string name="destinoR_template">Temixco Centro</string>
    <string name="precioR_template">$ 40.00 MXN</string>

    <!--    Strings para el menu del Bottom Navigation View-->
    <string name="inicio_menu_var">Inicio</string>
    <string name="rides_menu_var">Rides</string>
    <string name="ecopuntos_menu_var">Ecopuntos</string>
    <string name="mi_perfil_menu_var">Mi perfil</string>

    <!--    Strings del layout Rides-->
    <string name="rides_titulo">Rides</string>
    <string name="busqueda_destino_hint">Destino</string>
    <string name="busqueda_inicio_hint">Inicio</string>
    <string name="location_permission">Este permiso es necesario para poder mostrar las rutas.</string>

    <!--    Strings del Pop-Up Información de Ruta-->
    <string name="informaci_n_de_la_ruta">Información de la Ruta</string>

    <!--    Strings del layout EcoPuntos-->
    <string name="mis_ecopuntos">Mis €copuntos</string>
    <string name="ecos_acumulados_template">250</string>
    <string name="txt_comida">Comida</string>
    <string name="txtPrecio">50 €cos</string>
    <string name="imagen">ImagenCupon</string>

    <!--    Strings del layout Password-->
    <string name="enviar_correo">Enviar correo</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="correo_hint">Correo</string>
    <string name="password">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="configuracion_menu_var">Configuración</string>


</resources>