<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

        <item android:title="@string/inicio_menu_var"
        android:id="@+id/homeActivity"
        android:icon="@drawable/home"/>

        <item android:title="@string/rides_menu_var"
            android:id="@+id/ridesActivity"
            android:icon="@drawable/carro_icono"/>

    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item android:title="Mi perfil">
            <menu>
                <group
                    android:menuCategory="container" >

                    <item android:title="@string/ecopuntos_menu_var"
                        android:id="@+id/ecoActivity"
                        android:icon="@drawable/regalo"/>

                    <item android:title="Mis cupones"
                        android:id="@+id/misCupones"
                        android:icon="@drawable/cupon"/>

                    <item android:title="@string/mi_perfil_menu_var"
                        android:id="@+id/perfilActivity"
                        android:icon="@drawable/cara"/>
                </group>
            </menu>
        </item>
    </group>

    <item android:title="@string/configuracion_menu_var">
        <menu>
            <group
                android:menuCategory="container" >
                <item
                    android:id="@+id/settings"
                    android:icon="@drawable/settings"
                    android:title="@string/configuracion_menu_var" />
            </group>
        </menu>
    </item>

</menu>